--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
